test/corpus/atom.txt
==============
Atom - Unquoted
==============

:abcd
:_ab_cd_
:ISO8601
:a@localhost
:a@localhost?
:a@localhost!

---

(source_file
  (atom)
  (atom)
  (atom)
  (atom)
  (atom)
  (atom))

==============
Atom - Operator
==============

:++
:--
:::
:\\

---

(source_file
  (atom)
  (atom)
  (atom)
  (atom))

==============
Atom - Quoted
==============

:'hello'
:"Hello"

---

(source_file (atom) (atom))

==============
Atom - Unicode
==============

{:runtime, :time_μs, :"£", "£", '£', :こんにちは, :Ólá, :olá, :Olá}

---

(source_file (tuple (atom) (atom) (atom) (string) (charlist) (atom) (atom) (atom) (atom)))
