test/corpus/comment.txt
================================================================================
Comment empty
================================================================================

#

--------------------------------------------------------------------------------

(source_file (comment))

================================================================================
Comment single line
================================================================================

# single comment

--------------------------------------------------------------------------------

(source_file (comment))

================================================================================
Comment multiple start symbols
================================================================================

### multi "#"
:hello

--------------------------------------------------------------------------------

(source_file
  (comment)
  (atom))

================================================================================
Comment many consecutive lines
================================================================================

## many
## consecutive
:hello
## lines

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (atom)
  (comment))

================================================================================
Comment in nested structure
================================================================================

[ 1 ## inside a list
, { 2 # and a tuple, too!
  , 3 }
]

--------------------------------------------------------------------------------

(source_file
  (list
    (number)
    (comment)
    (tuple
      (number)
      (comment)
      (number))))
 
================================================================================
Doesn't match inside string
================================================================================
 
 # this is a comment
 "this is #{interpolation}"
 
  -----
  
  (source_file
    (comment)
    (string (interpolation (variable)))
