test/corpus/map.txt
===========
Map empty
===========

%{}

---

(source_file (map))


================================================================================
Map with one key and value
================================================================================

%{ :hello => "world" }

--------------------------------------------------------------------------------

(source_file
  (map
    (map_entry
        (atom) (string))))

================================================================================
Map with many keys and values
================================================================================

%{ hello: :joe, goodbye: "moe" }

--------------------------------------------------------------------------------

(source_file
  (map
    (map_entry (atom) (atom))
    (map_entry (atom) (string))))


================================================================================
Map error - missing comma
================================================================================

%{1 2}

--------------------------------------------------------------------------------

(source_file (map (ERROR (number))))

================================================================================
Map updating
================================================================================

%{ erlang | hello: :jose, goodbye: "joe" }

--------------------------------------------------------------------------------

(source_file 
  (map 
    (map_update 
      (variable) 
      (map_entry (atom) (atom)) 
      (map_entry (atom) (string)) )))
