test/corpus/tuple.txt
===========
Tuple
===========

{}
{1, 2, 3}
{[:a], 1, true}

---

(source_file
  (tuple)
  (tuple (number) (number) (number))
  (tuple
    (list (atom))
    (number)
    (boolean)))

====================
Tuple - Error
====================

{1 2}

---

(source_file (tuple (number) (ERROR (number))))

====================
Tuple - Trailing Separator
====================

{1,2,3,}

---

(source_file (tuple (number) (number) (number)))